[package]
name = "mqtt_logger"
version = "0.1.0"
authors = ["Albert Viaplana <pichi.pride@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rumqtt = "0.31.0"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
mysql = "18.2.0"
config = "0.9"
crossbeam-channel = "0.3"